--- a/config-template.conf
+++ b/config-template.conf
@@ -13,7 +13,7 @@
 
 KHADAS_BOARD=Edge2
 LINUX=mainline
-UBOOT=mainline
+UBOOT=2017.09
 DISTRIBUTION=Ubuntu
 DISTRIB_RELEASE=jammy
 DISTRIB_TYPE=gnome
