--- a/config/boards/Edge2.conf
+++ b/config/boards/Edge2.conf
@@ -45,6 +45,34 @@ case "$LINUX" in
 		fi
 		MODESETTING_CONF=""
 		;;
+	6.00)
+		LINUX_DTB="arch/arm64/boot/dts/rockchip/rk3588s-khadas-edge2.dtb"
+		[ "$LINUX_VENDOR_DIR" ] && \
+		LINUX_DIR=$(realpath "$LINUX_VENDOR_DIR")
+		LINUX_GIT_BRANCH="khadas-linux-6.0.y"
+		LINUX_DEFCONFIG="${LINUX_DEFCONFIG:-kedges_defconfig}"
+		SERIALCON="ttyFIQ0"
+		BOOT_SCRIPT_BOARD=""
+		GPU_VER="g610"
+		if [ "$DISTRIB_TYPE" != "server" ]; then
+			GPU_PLATFORM="wayland"
+		fi
+		MODESETTING_CONF=""
+		;;
+	6.10)
+		LINUX_DTB="arch/arm64/boot/dts/rockchip/rk3588s-khadas-edge2.dtb"
+		[ "$LINUX_VENDOR_DIR" ] && \
+		LINUX_DIR=$(realpath "$LINUX_VENDOR_DIR")
+		LINUX_GIT_BRANCH="khadas-linux-6.1.y"
+		LINUX_DEFCONFIG="${LINUX_DEFCONFIG:-kedges_defconfig}"
+		SERIALCON="ttyFIQ0"
+		BOOT_SCRIPT_BOARD=""
+		GPU_VER="g610"
+		if [ "$DISTRIB_TYPE" != "server" ]; then
+			GPU_PLATFORM="wayland"
+		fi
+		MODESETTING_CONF=""
+		;;
 	mainline)
 		LINUX_DTB=""
 		LINUX_DIR=""
