--- a/config-template.conf
+++ b/config-template.conf
@@ -12,7 +12,7 @@
 #INSTALL_TYPE - Supported Installation Type, check array 'INSTALL_TYPE_ARRAY' in 'env/setenv.sh'
 
 KHADAS_BOARD=Edge2
-LINUX=mainline
+LINUX=6.10
 UBOOT=2017.09
 DISTRIBUTION=Ubuntu
 DISTRIB_RELEASE=jammy
