--- a/config/boards/Edge2.conf
+++ b/config/boards/Edge2.conf
@@ -4,8 +4,8 @@
 
 SUPPORTED_UBOOT=("2017.09")
 SUPPORTED_UBOOT_DESC=("U-boot 2017.09")
-SUPPORTED_LINUX=("5.10","6.00","6.10")
-SUPPORTED_LINUX_DESC=("Linux 5.10","Linux 6.00","Linux 6.10")
+SUPPORTED_LINUX=("5.10" "6.00" "6.10")
+SUPPORTED_LINUX_DESC=("Linux 5.10" "Linux 6.00" "Linux 6.10")
 
 case "$UBOOT" in
 	2017.09)
