--- a/config/config
+++ b/config/config
@@ -367,7 +367,7 @@ UBUNTU_MIRROR='ports.ubuntu.com/'
 ROOTFS_CACHE_URL="http://build.khadas.com/khadas/fenix/cache/rootfs"
 
 ## U-boot & Linux GitHub URL
-LINUX_SOURCE_URL="${LINUX_SOURCE_URL:-https://github.com/khadas/linux}"
+LINUX_SOURCE_URL="${LINUX_SOURCE_URL:-https://github.com/martinlyons/linux}"
 UBOOT_SOURCE_URL="${UBOOT_SOURCE_URL:-https://github.com/khadas/u-boot}"
 
 if [[ $DOWNLOAD_MIRROR == china ]] ; then
